# Qt-BLE-Example

./: README.md
Qt/: BLEController.cpp  BLEController.h  CMakeLists.txt  Main.qml  main.cpp  sound.m4a  sound_second.m4a  sound_third.m4a
esp32Demo/: esp32Demo.ino
